--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<nav class="navbar navbar-inverse navbar-expand-lg fixed-top">
 		<a class="navbar-brand" href="/">
-			<img src="/images/morgzfest-logo.png" width="130" class="d-inline-block align-top" alt="">
+			<img src="logo-2.png" width="130" class="d-inline-block align-top" alt="">
 		</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
