--- a/index.html
+++ b/index.html
@@ -85,96 +85,173 @@
         <div class="purchase text-center my-5 mx-auto col-md-7 col-sm-12">
 
             <p class="alt">
-                We're building a giant Super Fan Wall at MorgzFest made up of everyone that comes to MorgzFest! Every ticket purchased gets ONE picture on the Super Fan Wall which will be made into a giant wall display at MorgzFest 2019! You also have a chance to be noticed by Morgz himself when he checks out the wall!
+                Welcome to my official website
             </p>
 
-            <h3 class="alt">TO ENTER</h3>
+            <h3 class="alt">Merchandise</h3>
 
             <p>
-                <span class="alt">To be a part of Morgzfest 2019 Fan Wall just submit your</span> 
-                TICKET BARCODE ID 
-                <span class="alt">below then submit your picture.</span>
-            </p>
+                <div id='collection-component-43ff3daeeba'></div>
+    <script type="text/javascript">
+    /*<![CDATA[*/
 
-            <div class="text-muted small mt-3">TICKET BARCODE ID:</div>
-            <input type="text" name="purchase_id" placeholder="e.g. Y4G27A543411" maxlength="12" value="" v-model="purchase_id" v-on:change="check" v-on:keyup="check"  :disabled="validating || validated"> 
-            <span class="indicator" v-if="purchase_id">
-                <i v-if="validating" class="fas fa-hourglass-half text-info"></i>
-                <i v-if="correct && !validating && !validated" class="fas fa-times text-danger"></i>
-                <i v-if="correct && validated" class="fas fa-check text-success"></i>
-            </span>
+    (function () {
+      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+      if (window.ShopifyBuy) {
+        if (window.ShopifyBuy.UI) {
+          ShopifyBuyInit();
+        } else {
+          loadScript();
+        }
+      } else {
+        loadScript();
+      }
 
-            <div v-if="!purchase_id" class="text-left small mt-2">
-                <i>Your TICKET BARCODE ID is the 12 digit alphanumerical code found on your etickets.  Please don't get this confused with the Ticket Reference which starts "TS-". Once you've bought your tickets, you can download them <a href="https://morgzfest.eventcube.io/order/find" target="_blank">here</a>.</i>
-            </div>
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
 
-            <div v-if="!validated" class="ticket-example mt-2">
-                <img src="/images/ticket-example.png"> <br>
-                If you don’t have a ticket you can buy one <a href="https://morgzfest.eventcube.io/" target="_blank">here</a>.
-            </div>
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'musles-apparel.myshopify.com',
+          storefrontAccessToken: '789729ba46852f532e4e5e2f7a18c605',
+        });
 
-            <div class="status mt-2">
-                <div v-if="purchase_id.length < 12 && purchase_id.length > 0">
-                    Keep typing! Your unique ticket reference is 12 characters long.
-                </div>
-
-                <div v-if="validating">
-                    One moment while we check this Ticket Barcode ID.
-                </div>
-
-                <div v-if="correct && !validating && !validated">
-                    This is NOT a valid Ticket Barcode ID, we recommend copying and pasting it from your eticket.
-                </div>
-
-                <div v-if="correct && validated">
-                    Congrats! This is a valid Ticket Barcode ID.
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row" v-if="validated">
-
-        <div class="option text-center mb-3 mx-auto col-md-7 col-sm-12">
-            <form method="post" action="/confirm/upload" ref="uploaderForm" enctype="multipart/form-data" v-on:submit.prevent>
-                <input type="hidden" name="_token" value="iA8MpIFmLNtjm46hnOR2AdCsfjc1WUNjcQAm7yq8">
-                <input class="d-none" type="file" name="selectedImage" id="selectedImage" v-on:change="fileSelected" ref="selectedImage" accept="image/*">
-                <button class="btn btn-dark btn-lg active" @click="$refs.selectedImage.click()">Upload an image <span class="capture-only">or take a pic</span></button>
-                <div class="text-muted small mt-1">Upload an image <span class="capture-only">or take a pic</span> - if it's not a perfect square, we'll crop it to fit. The maximum file size is 5MB.</div>
-
-                <div v-if="too_big" class="text-danger">The image you've selected is too big. The maximum file size is 5MB.</div>
-
-                <div v-if="image">
-                    
-                    <div class="text-left p-3">
-                        <div><label><input type="checkbox" value="1" v-model="approve_rights"> I own the rights to this picture.</label></div>
-                        <div><label><input type="checkbox" value="1" v-model="approve_display"> I am happy for Morgzfest to use my picture as part of the "Wall" for photos, videos and print anywhere and forever.</label></div>
-                    </div>
-
-                    <button v-on:click="upload">Submit My Pic</button>
-                </div>
-            </form>
-        </div>
-
-<!--
-        <div class="option text-center mt-3 mx-auto col-7">
-            <a href="/login/youtube" class="btn btn-dark btn-lg active" role="button">YouTube</a>
-            <div class="text-muted small mt-1">Sign in with YouTube and we'll use your current YouTube profile pic.</div>
-        </div>
-
-        <div class="option text-center my-5 mx-auto col-7">
-            <a href="/login/instagram" class="btn btn-dark btn-lg active" role="button">Instagram</a>
-            <div class="text-muted small">We'll use your current Instagram profile picture.</div>
-        </div>
--->
-        
-    </div>
-
-    <div class="row">
-        <div class="text-center mb-5 mx-auto col-md-7 col-sm-12">
-            <h3 class="alt">Deadline</h3>
-            <p class="text-left">The deadline is 9pm (UK TIME) Monday 26th August.  After this time you will not be able to submit any more pics, as we need to send Bald Martin to the printers to get the wall manufactured.</p>
-        </div>
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('collection', {
+            id: 85623341102,
+            node: document.getElementById('collection-component-43ff3daeeba'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
+  "product": {
+    "buttonDestination": "modal",
+    "variantId": "all",
+    "contents": {
+      "imgWithCarousel": false,
+      "variantTitle": false,
+      "options": false,
+      "description": false,
+      "buttonWithQuantity": false,
+      "quantity": false
+    },
+    "text": {
+      "button": "VIEW PRODUCT"
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "calc(25% - 20px)",
+          "margin-left": "20px",
+          "margin-bottom": "50px",
+          "width": "calc(25% - 20px)"
+        },
+        "imgWrapper": {
+          "position": "relative",
+          "height": "0",
+          "padding-top": "calc(75% + 15px)"
+        },
+        "img": {
+          "height": "calc(100% - 15px)",
+          "position": "absolute",
+          "left": "0",
+          "right": "0",
+          "top": "0"
+        }
+      },
+      "button": {
+        "background-color": "#000000",
+        ":hover": {
+          "background-color": "#000000"
+        },
+        ":focus": {
+          "background-color": "#000000"
+        }
+      }
+    }
+  },
+  "cart": {
+    "contents": {
+      "button": true
+    },
+    "text": {
+      "button": "INFLUIFY CHECKOUT"
+    },
+    "styles": {
+      "button": {
+        "background-color": "#000000",
+        ":hover": {
+          "background-color": "#000000"
+        },
+        ":focus": {
+          "background-color": "#000000"
+        }
+      },
+      "footer": {
+        "background-color": "#ffffff"
+      }
+    }
+  },
+  "modalProduct": {
+    "contents": {
+      "img": false,
+      "imgWithCarousel": true,
+      "variantTitle": false,
+      "buttonWithQuantity": true,
+      "button": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0px",
+          "margin-bottom": "0px"
+        }
+      },
+      "button": {
+        "background-color": "#000000",
+        ":hover": {
+          "background-color": "#000000"
+        },
+        ":focus": {
+          "background-color": "#000000"
+        }
+      }
+    }
+  },
+  "toggle": {
+    "styles": {
+      "toggle": {
+        "background-color": "#000000",
+        ":hover": {
+          "background-color": "#000000"
+        },
+        ":focus": {
+          "background-color": "#000000"
+        }
+      }
+    }
+  },
+  "productSet": {
+    "styles": {
+      "products": {
+        "@media (min-width: 601px)": {
+          "margin-left": "-20px"
+        }
+      }
+    }
+  }
+}
+          });
+        });
+      }
+    })();
+    /*]]>*/
+    </script>
     </div>
 
 </div>
