--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
         <div class="copyright">© 2019 MorgzFest. All rights reserved. <a href="https://morgz.co/pages/privacy" target="_blank" style="">Privacy Policy</a></div>
 	</div>
 
-	<script src="/js/app.js"></script>
+	<script src="/app.js"></script>
 
-	<script src="/js/home.js"></script>
+	<script src="/home.js"></script>
 
 </body>
 </html>
