--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="row">
         <div class="intro col-12 mt-5 text-center">
-            <img class="wall-example" src="/website.png" srcset="/website.png 1x, /website.png 2x">
+            <img class="wall-example" src="/website.png" srcset="/website.png 1x, /Untitled-2.png 2x">
         </div>
     </div>
 </div>
