--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="container-fluid intro-wrapper">
     <div class="row">
         <div class="intro col-12 my-5 text-center">
-            <img class="logo" src="/images/morgzfest-logo-intro.png">
+            <img class="logo" src="/Untitled-3.png">
         </div>
     </div>
     <div class="row">
