--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
 
         <div class="help">Need help or have questions? Please contact us <a href="mailto:hello@morgzfest.com" style="">here</a>.</div>
-        <div class="copyright">© 2019 MorgzFest. All rights reserved. <a href="/privacy" target="_blank" style="">Privacy Policy</a><br>Powered by Influify</div>
+        <div class="copyright">© 2019 Musles Media. <a href="/privacy" target="_blank" style="">Privacy Policy</a><br>Powered by Influify</div>
 	</div>
 
 	<script src="/app.js"></script>
